# MAC-POSTS

./: .gitignore  LICENSE  README.md  README.md~  build.sh  clean.sh
data/input_files/: MNM_input_link  config.conf
data/input_files/record/: MNM_output_load_interval_volume  MNM_output_record_interval_volume
data/input_files_1link/: MNM_input_demand  MNM_input_link  config.conf  exp_link.ipynb
data/input_files_1link/record/: MNM_output_load_interval_tt  MNM_output_load_interval_volume  MNM_output_record_interval_tt  MNM_output_record_interval_volume
data/input_files_2link/: 0  2  MNM_input_demand  MNM_input_link  MNM_input_vms  Snap_graph  config.conf
data/input_files_2link/record/: 0_speed  0_volume  1_speed  1_volume  2_speed  2_volume  3_dms  3_speed  3_volume  MNM_output_load_interval_volume  MNM_output_record_interval_volume
data/input_files_7link/: MNM_input_demand  MNM_input_link  Snap_graph  config.conf
data/input_files_7link/record/: MNM_output_load_interval_tt  MNM_output_load_interval_volume  MNM_output_record_interval_tt  MNM_output_record_interval_volume
data/input_files_7link_fix/: MNM_input_demand  MNM_input_node  MNM_input_od  path_table  path_table_buffer
data/input_files_7link_multiclass/: MNM_input_demand  MNM_input_link  MNM_input_node  config.conf  path_table_buffer
data/input_files_7link_multiclass/record/: MNM_output_record_interval_tt
data/input_files_7link_multiclass_new/: config.conf  path_table_buffer
data/input_files_MckeesRocks_SPC/: MNM_input_link  MNM_input_node  MNM_input_od  Snap_graph  config.conf
data/input_files_MckeesRocks_SPC/record/: MNM_output_record_interval_volume
data/input_files_MckeesRocks_SPC_new/: config.conf
data/input_files_PGH/: MNM_input_link  MNM_input_node  MNM_input_od  Snap_graph  config.conf
data/input_files_SR41/: MNM_input_link  MNM_input_node  MNM_input_od  Snap_graph  config.conf
data/input_files_new_philly/: 0  1  2  3  MNM_input_node  Snap_graph  config.conf
data/input_files_new_philly_dta/: DTA_interface.py  MNM_input_od  Philly.lin  config.conf  dta_response
data/input_files_philly/: MNM_input_link  MNM_input_node  MNM_input_spd  MNM_input_vms  Snap_graph  config.conf  i95existing.csv
doc/source/: conf.py  index.rst  model.rst  utls.rst
doc_builder/: make.bat
doc_builder/source/: comp_link.rst  conf.py  extension.rst  index.rst
doc_builder/source/static_files/: illustrations.pptx
doc_builder/sphinx-contrib/: .hgignore  .hgtags  AUTHORS  README.rst  make-ext.py
doc_builder/sphinx-contrib/.hg/: dirstate  (+2 more)
docs/: Makefile  component.html  genindex.html  utls.html
docs/_sources/: algorithm.txt
docs/source/: start.rst
side_project/MNM_fake_builder/: MNM_fake_grid_network.ipynb  MNM_fake_grid_network_multiclass.ipynb  MNM_input_demand  MNM_input_link  MNM_input_node  MNM_input_od  Snap_graph  generate_all_paths.ipynb
side_project/TNM2MNM/: Philly.lin  Philly.nod  Philly.odp  SR41.dmd  SR41.net  SR41.nod  converter.py
side_project/network_builder/: MNM_mcnb.py  MNM_nb.py  Untitled.ipynb  test_network_builder.ipynb
side_project/network_consolidation/: consolidate.ipynb
side_project/read_stat/: read_statistics.ipynb
side_project/shapefile2MNM_multiclass/: process_demand.ipynb  process_demand_and_pathsettinginconf.ipynb  sf_to_MNM_input_files.ipynb
side_project/vehicle_based_heatmap/: data_pre_for_CARTO.ipynb
src/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  main.cpp  setup.py
src/examples/: CMakeLists.txt  exp_link.cpp  exp_realtime.cpp  realtime_dta_server.cpp  test_ctm.cpp  test_cumulative_curve.cpp  test_determined_routing.cpp  test_dta.cpp  test_dta_gradient.cpp  test_due.cpp  test_emission.cpp  test_ksp.cpp  test_misc.cpp  test_multiclass.cpp  test_multiclass_debug.cpp  test_path.cpp  test_realtime.cpp  test_sp.cpp  test_tdsp.cpp  test_tree_cc.cpp  test_ults.cpp
src/examples/MNMAPI_test/: PDODE.ipynb  basic_test.ipynb  libDODE.ipynb
src/examples/MNMAPI_test/.ipynb_checkpoints/: DODE-checkpoint.ipynb  basic_test-checkpoint.ipynb  libDODE-checkpoint.ipynb
src/examples/MNMAPI_test/MNM_cache/input_files_2link_fix/: MNM_input_demand  MNM_input_link  MNM_input_node  config.conf  path_table  path_table_buffer
src/examples/covDODE/: test_SDODE.ipynb  test_logit_dode.ipynb
src/examples/mcDODE/: DODE_7link-Spd.ipynb  DODE_7link.ipynb  DODE_SR41.ipynb  README.md  testDODE.ipynb  testDODE.py
src/examples/nb_test/: get_file.ipynb
src/examples/nb_test/new_mcroad2/: MNM_input_link
src/examples/nb_test/wei_mcroad/: MNM_input_link  MNM_input_node  Snap_graph  config.conf
src/glib-core/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  bd.h  cmake_install.cmake  ds.h  dt.cpp  dt.h  json.h
src/minami/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  base.h  base.h_backup.h  cc_tree.cpp  cc_tree.h(obsolete)  cmake_install.cmake  dlink.cpp  dlink.h  dnode.cpp  dnode.h  dta.Err  dta.cpp  dta.h  dta_gradient_utls.cpp  dta_gradient_utls.h  due.cpp  due.h  emission.cpp  emission.h  enum.h  factory.cpp  factory.h  gridlock_checker.cpp  gridlock_checker.h  io.cpp  io.h  k_shortest_path.cpp  k_shortest_path.h  main.cpp  main.cpp(obsolete)  marginal_cost.cpp  marginal_cost.h  multiclass.cpp  multiclass.h  od.cpp  od.h  path.cpp  (+30 more)
src/minami/input_files/: MNM_input_demand  MNM_input_link  MNM_input_od  MNM_input_od~  Snap_graph  Snap_graph~  config.conf  config.conf~
src/minami/input_files_2link/: MNM_input_demand  MNM_input_link  config.conf
src/minami/input_files_philly/: MNM_input_od  config.conf
src/pybinder/: .MNMAPI.cpp.cppimporthash  .rendered.MNMAPI.cpp  .rendered.test.cpp  .test.cpp.cppimporthash  CMakeLists.txt
src/pybinder/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/pybinder/pybind11/: CMakeLists.txt
src/pybinder/src/: dta_api.cpp  dta_api.h  main.cpp  typecast_ground .cpp  typecast_ground.h
src/pylib/: DODE.py  covariance_tree.py  mcDODE.py  sDODE.py
src/snap-core/: CMakeLists.txt  CMakeLists.txt~  Makefile  Snap.cpp  Snap.h  cmake_install.cmake  enum.h  flow.cpp  routing.h
(+1609 files in other folders)
